# TradingAgentsNew

./: QUICKSTART.md  README.md  WEB_APP_README.md  check_installation.py  pyproject.toml  requirements.txt  start_webapp.sh  web_app.py
tradingagents/: ADVANCED_FEATURES_README.md  DEPLOYMENT_GUIDE.md  TradingAgents_Complete_Manual.md  advanced_example.py  config_example.py  multi_llm_example.py  streamlit_frontend_example.py
tradingagents/automated_trading/: README.md  __init__.py  automated_trader.py  example_usage.py
tradingagents/automated_trading/broker/: simulated_broker.py
tradingagents/automated_trading/monitor/: market_monitor.py
tradingagents/automated_trading/risk/: risk_manager.py
tradingagents/automated_trading/scheduler/: trading_scheduler.py
tradingagents/config/: README.md  config_manager.py  default_config.yaml  user_config_template.yaml
tradingagents/llm/: README.md  __init__.py  llm_factory.py
tradingagents/notification/: email_service.py
tradingagents/real_brokers/: base_broker.py  huatai_broker.py
tradingagents/streamlit_app/: README.md  app.py  main.py  run.py
tradingagents/technical_analysis/: advanced_indicators.py
tradingagents/web_interface/: app.py
tradingagents/web_interface/static/css/: style.css
tradingagents/web_interface/static/js/: dashboard.js
tradingagents/web_interface/templates/: dashboard.html  index.html
